<resources>
    <string name="app_name">Trycar</string>
    <string name="consultar">Consultar</string>
    <string name="guardar">Guardar</string>
    <string name="minimo">Minimo :</string>
    <string name="maximo">Maximo :</string>
    <string name="promedio">Promedio :</string>
    <string name="rpm">RPM: </string>
    <string name="temprefri">Temp Ref:</string>
    <string name="tempamb">Temp  Amb:</string>
    <string name="percentfuel">% fuel:</string>
    <string name="levelfuel">Level Fuel:</string>
    <string name="tempoil">TempOil:</string>
    <string name="engine">Engine:</string>
    <string name="speed">Speed: </string>
    <string name="reporte">Reporte</string>
    <string name="envmail">Enviar mail</string>
    <string name="ruta">Ver Mapa</string>
    <string name="nombre">Nombre :</string>
    <string name="email">Email :</string>
    <string name="codigo">Codigo</string>
    <string name="indicador">Indicador :</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="usuario">Usuario</string>

    <string-array name="indicadores_array">
        <item>RPM</item>
        <item>Speed</item>
        <item>Tempo Oil</item>
        <item>Temp Amb</item>
        <item>Temp Refri</item>
        <item>Engine</item>
        <item>Level Fuel</item>
        <item>%Fuel</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
