<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/codigo"/>
        <EditText
            android:id="@+id/editcodigo"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
     <Button
         android:onClick=""
         android:text="@string/consultar" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/minimo" />
        <EditText
            android:id="@+id/editminimo"
            android:inputType="text"
            android:maxLength="10"
            android:enabled ="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/maximo" />
        <EditText
            android:id="@+id/editmaximo"
            android:inputType="text"
            android:maxLength="10"
            android:enabled ="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/promedio" />
        <EditText
            android:id="@+id/editpromedio"
            android:inputType="text"
            android:maxLength="10"
            android:enabled ="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:longClickable="false"/>
    </TableRow>

</TableLayout>