<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
<TableRow>
    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editnombre"
        android:inputType="text"
        android:maxLength="30"
       />

</TableRow>
    <TableRow>
        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editemail"
            android:inputType="text"
            android:maxLength="30"
            />

    </TableRow>
    <TableRow>
        <Button
            android:onClick=""
            android:text="@string/guardar"/>
    </TableRow>
</TableLayout>